testsuite/tests/properties/invalidation_during_mmz/expected_concrete_syntax.lkt
grammar None_grammar {
    main_rule <- Example(@Example)

}

class FooNode {
}

class Example : FooNode {

    fun fetch_example_unit (): InternalUnit

    @memoized fun internal_mmz_prop (i : Integer): Integer =
    if (i = 0) then (raise PropertyError()) else i

    @export @memoized fun mmz_prop (i : Integer): Integer = {
        val _ = self.fetch_example_unit;

        self.internal_mmz_prop(i)
    }
}
